2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.5 ===

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* gobject/gobject-docs.sgml: Add a 2.18 index

2008-08-01  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Add some more GEmblemedIcon things.

	* glib/tmpl/testing.sgml: Fix a typo. Noticed by Marek Kasik.

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: Add g_markup_context_get_user_data

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt:
	* gio/gio-docs.xml: Add GEmblemedIcon 

2008-07-21  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.4 ===

2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	* gobject/gobject-sections.txt: Add new signal api.

2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt:
	* glib/tmpl/i18n.sgml: Add new gettext stuff

2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 530759 – update the gobject tutorial to the XXI century

	* gobject/*: Some updates to the tutorial. Patch by Emmanuele
	Bassi.

2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Add g_content_type_guess_for_tree

2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 543220 – Case collision on gio-extension-points.html

	Reported by Ryan Schmidt
	* gio/overview.xml: Rename id to avoid filename conflict.

2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 543168 – Description of G_SLICE=debug-blocks discourages its use

	* glib/running.sgml: Improve docs of G_SLICE=debug-blocks.
	Patch by Alessandro Vesely.

2008-07-08  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Add new GMount functions

2008-07-05  Matthias Clasen  <mclasen@redhat.com>

	Bug 521589 – [RFC] gobject documentation should mention Vala

	* gobject/tut_tools.xml: Add a reference to Vala.
	Patch by Marc-Andre Lureau.

2008-07-05  Matthias Clasen  <mclasen@redhat.com>
