@@ -802,6 +802,7 @@ g_mount_operation_result_get_type G_GNUC_CONST
 g_output_stream_splice_flags_get_type G_GNUC_CONST
 g_ask_password_flags_get_type G_GNUC_CONST
 g_password_save_get_type G_GNUC_CONST
+g_emblem_origin_get_type G_GNUC_CONST
 #endif
 #endif
 
@@ -811,6 +812,18 @@ g_password_save_get_type G_GNUC_CONST
 g_emblemed_icon_get_type G_GNUC_CONST
 g_emblemed_icon_new
 g_emblemed_icon_get_icon
-g_emblemed_icon_get_emblem
+g_emblemed_icon_get_emblems
+g_emblemed_icon_add_emblem
 #endif
 #endif
+
+#if IN_HEADER(__G_EMBLEM_H__)
+#if IN_FILE(__G_EMBLEM_C__)
+g_emblem_get_type G_GNUC_CONST
+g_emblem_new
+g_emblem_new_with_origin
+g_emblem_get_icon
+g_emblem_get_origin
+#endif
+#endif
+
